# dex-amm-contract

./: .gitignore  Cargo.toml  Makefile  README.md  capsule.toml  deployment.toml
.github/workflows/: build_and_test.yml
contracts/info-lock-script/src/: error.rs  main.rs
contracts/info-type-script/: Cargo.toml
contracts/info-type-script/src/: entry.rs  error.rs
contracts/info-type-script/src/entry/: liquidity_verify.rs  swap_verify.rs  type_id.rs  verify.rs
contracts/liquidity-lock-script/src/: main.rs
contracts/swap-lock-script/: Cargo.toml
contracts/swap-lock-script/src/: error.rs  main.rs
contracts/swap-order-lock-script/: Cargo.toml
contracts/swap-order-lock-script/src/: error.rs  main.rs
migrations/dev/: 2021-01-25-145139.json
share/src/: cell.rs  hash.rs  lib.rs
test/: Cargo.toml  Makefile
test/schemas/: cell.mol
test/src/: cell_builder.rs  lib.rs  schema.rs  tx_builder.rs
test/src/tests/: info_typescript_test.rs  mod.rs
tests/src/: lib.rs  tx_builder.rs
tests/src/script_test/: info_typescript_test.rs  liquidity_lockscript_test.rs  mod.rs
