[workspace]
members = [
    "contracts/swap-lock-script",
    "contracts/liquidity-lock-script",
    "contracts/info-lock-script",
    "contracts/info-type-script",
    "dynamic-loading",
    "share",
    "test",
    "natives"
]

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
